y.output
状态 66 conflicts: 1 shift/reduce
状态 67 conflicts: 1 shift/reduce
状态 68 conflicts: 1 shift/reduce
状态 69 conflicts: 1 shift/reduce
状态 70 conflicts: 1 shift/reduce
状态 122 conflicts: 1 shift/reduce
状态 123 conflicts: 1 shift/reduce
状态 124 conflicts: 1 shift/reduce
状态 125 conflicts: 1 shift/reduce
状态 126 conflicts: 1 shift/reduce
状态 127 conflicts: 1 shift/reduce
状态 128 conflicts: 1 shift/reduce
状态 129 conflicts: 1 shift/reduce
状态 130 conflicts: 1 shift/reduce
状态 131 conflicts: 1 shift/reduce
状态 132 conflicts: 1 shift/reduce
状态 133 conflicts: 1 shift/reduce
状态 134 conflicts: 1 shift/reduce
状态 135 conflicts: 1 shift/reduce
状态 136 conflicts: 1 shift/reduce
状态 137 conflicts: 1 shift/reduce
状态 138 conflicts: 1 shift/reduce
状态 139 conflicts: 1 shift/reduce
状态 140 conflicts: 1 shift/reduce
状态 141 conflicts: 1 shift/reduce
状态 142 conflicts: 1 shift/reduce
状态 143 conflicts: 1 shift/reduce
状态 144 conflicts: 1 shift/reduce
状态 145 conflicts: 1 shift/reduce
状态 146 conflicts: 1 shift/reduce
状态 147 conflicts: 1 shift/reduce
状态 148 conflicts: 1 shift/reduce
状态 149 conflicts: 1 shift/reduce


语法

    0 $accept: PROGRAM $end

    1 PROGRAM: EXTDEFS

    2 EXTDEFS: EXTDEF EXTDEFS
    3        | %empty

    4 EXTDEF: SPEC EXTVARS SEMI
    5       | SPEC FUNC STMTBLOCK

    6 EXTVARS: EXTVAR
    7        | %empty

    8 EXTVAR: DEC
    9       | DEC COMMA EXTVAR

   10 SPEC: TYPE
   11     | STSPEC

   12 STSPEC: STRUCT OPTTAG LC DEFS RC
   13       | STRUCT ID

   14 OPTTAG: ID
   15       | %empty

   16 VAR: ID
   17    | VAR LB INT RB

   18 FUNC: ID LP PARAS RP

   19 PARAS: PARASF
   20      | %empty

   21 PARASF: PARA COMMA PARASF
   22       | PARA

   23 PARA: SPEC VAR

   24 STMTBLOCK: LC DEFS STMTS RC

   25 STMTS: STMT STMTS
   26      | %empty

   27 STMT: EXP SEMI
   28     | STMTBLOCK
   29     | RETURN EXP SEMI
   30     | IF LP EXP RP STMT ESTMT
   31     | FOR LP FEXP SEMI FEXP SEMI FEXP RP STMT
   32     | CONT SEMI
   33     | BREAK SEMI

   34 ESTMT: ELSE STMT
   35      | %empty

   36 DEFS: DEF DEFS
   37     | %empty

   38 DEF: SPEC DECS SEMI

   39 DECS: DEC COMMA DECS
   40     | DEC

   41 DEC: VAR
   42    | VAR ASSIGNOP INIT

   43 INIT: EXP
   44     | LC ARGS RC

   45 FEXP: EXP
   46     | %empty

   47 EXP: EXP MUL EXP
   48    | EXP DIV EXP
   49    | EXP MOD EXP
   50    | EXP PLUS EXP
   51    | EXP MINUS EXP
   52    | EXP SHL EXP
   53    | EXP SHR EXP
   54    | EXP GT EXP
   55    | EXP LT EXP
   56    | EXP GE EXP
   57    | EXP LE EXP
   58    | EXP EQU EXP
   59    | EXP NEQ EXP
   60    | EXP BITAND EXP
   61    | EXP BITOR EXP
   62    | EXP BITXOR EXP
   63    | EXP LOGAND EXP
   64    | EXP LOGOR EXP
   65    | EXP ASSIGNOP EXP
   66    | EXP PLUS_ASSIGN EXP
   67    | EXP MINUS_ASSIGN EXP
   68    | EXP MUL_ASSIGN EXP
   69    | EXP DIV_ASSIGN EXP
   70    | EXP AND_ASSIGN EXP
   71    | EXP XOR_ASSIGN EXP
   72    | EXP OR_ASSIGN EXP
   73    | EXP SHR_ASSIGN EXP
   74    | EXP SHL_ASSIGN EXP
   75    | MINUS EXP
   76    | LOGNOT EXP
   77    | BITNOT EXP
   78    | PLUSPLUS EXP
   79    | MINUSMINUS EXP
   80    | LP EXP RP
   81    | ID LP ARGS RP
   82    | ID ARRS
   83    | EXP DOT ID
   84    | INT
   85    | READ LP EXP RP
   86    | WRITE LP EXP RP
   87    | NEGINT
   88    | EXP NEGINT

   89 ARRS: LB EXP RB ARRS
   90     | %empty

   91 ARGS: EXP COMMA ARGS
   92     | FEXP


Terminals, with rules where they appear

$end (0) 0
error (256)
INT (258) 17 84
NEGINT (259) 87 88
ID (260) 13 14 16 18 81 82 83
SEMI (261) 4 27 29 31 32 33 38
COMMA (262) 9 21 39 91
TYPE (263) 10
STRUCT (264) 12 13
RETURN (265) 29
IF (266) 30
ELSE (267) 34
BREAK (268) 33
CONT (269) 32
FOR (270) 31
READ (271) 85
WRITE (272) 86
LC (273) 12 24 44
RC (274) 12 24 44
ASSIGNOP (275) 42 65
PLUS_ASSIGN (276) 66
MINUS_ASSIGN (277) 67
MUL_ASSIGN (278) 68
DIV_ASSIGN (279) 69
AND_ASSIGN (280) 70
XOR_ASSIGN (281) 71
OR_ASSIGN (282) 72
SHL_ASSIGN (283) 74
SHR_ASSIGN (284) 73
LOGOR (285) 64
LOGAND (286) 63
BITOR (287) 61
BITXOR (288) 62
BITAND (289) 60
EQU (290) 58
NEQ (291) 59
GT (292) 54
LT (293) 55
GE (294) 56
LE (295) 57
SHL (296) 52
SHR (297) 53
PLUS (298) 50
MINUS (299) 51 75
MUL (300) 47
DIV (301) 48
MOD (302) 49
LOGNOT (303) 76
MINUSMINUS (304) 79
PLUSPLUS (305) 78
BITNOT (306) 77
LP (307) 18 30 31 80 81 85 86
RP (308) 18 30 31 80 81 85 86
LB (309) 17 89
RB (310) 17 89
DOT (311) 83
LOWER_ELSE (312)


Nonterminals, with rules where they appear

$accept (58)
    左： 0
PROGRAM (59)
    左： 1, 右： 0
EXTDEFS (60)
    左： 2 3, 右： 1 2
EXTDEF (61)
    左： 4 5, 右： 2
EXTVARS (62)
    左： 6 7, 右： 4
EXTVAR (63)
    左： 8 9, 右： 6 9
SPEC (64)
    左： 10 11, 右： 4 5 23 38
STSPEC (65)
    左： 12 13, 右： 11
OPTTAG (66)
    左： 14 15, 右： 12
VAR (67)
    左： 16 17, 右： 17 23 41 42
FUNC (68)
    左： 18, 右： 5
PARAS (69)
    左： 19 20, 右： 18
PARASF (70)
    左： 21 22, 右： 19 21
PARA (71)
    左： 23, 右： 21 22
STMTBLOCK (72)
    左： 24, 右： 5 28
STMTS (73)
    左： 25 26, 右： 24 25
STMT (74)
    左： 27 28 29 30 31 32 33, 右： 25 30 31 34
ESTMT (75)
    左： 34 35, 右： 30
DEFS (76)
    左： 36 37, 右： 12 24 36
DEF (77)
    左： 38, 右： 36
DECS (78)
    左： 39 40, 右： 38 39
DEC (79)
    左： 41 42, 右： 8 9 39 40
INIT (80)
    左： 43 44, 右： 42
FEXP (81)
    左： 45 46, 右： 31 92
EXP (82)
    左： 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
    66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86
    87 88, 右： 27 29 30 43 45 47 48 49 50 51 52 53 54 55 56 57 58
    59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79
    80 83 85 86 88 89 91
ARRS (83)
    左： 89 90, 右： 82 89
ARGS (84)
    左： 91 92, 右： 44 81 91


State 0

    0 $accept: . PROGRAM $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (EXTDEFS)

    PROGRAM  转到状态 3
    EXTDEFS  转到状态 4
    EXTDEF   转到状态 5
    SPEC     转到状态 6
    STSPEC   转到状态 7


State 1

   10 SPEC: TYPE .

    $default  reduce using rule 10 (SPEC)


State 2

   12 STSPEC: STRUCT . OPTTAG LC DEFS RC
   13       | STRUCT . ID

    ID  shift, and go to state 8

    $default  reduce using rule 15 (OPTTAG)

    OPTTAG  转到状态 9


State 3

    0 $accept: PROGRAM . $end

    $end  shift, and go to state 10


State 4

    1 PROGRAM: EXTDEFS .

    $default  reduce using rule 1 (PROGRAM)


State 5

    2 EXTDEFS: EXTDEF . EXTDEFS

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (EXTDEFS)

    EXTDEFS  转到状态 11
    EXTDEF   转到状态 5
    SPEC     转到状态 6
    STSPEC   转到状态 7


State 6

    4 EXTDEF: SPEC . EXTVARS SEMI
    5       | SPEC . FUNC STMTBLOCK

    ID  shift, and go to state 12

    $default  reduce using rule 7 (EXTVARS)

    EXTVARS  转到状态 13
    EXTVAR   转到状态 14
    VAR      转到状态 15
    FUNC     转到状态 16
    DEC      转到状态 17


State 7

   11 SPEC: STSPEC .

    $default  reduce using rule 11 (SPEC)


State 8

   13 STSPEC: STRUCT ID .
   14 OPTTAG: ID .

    LC        reduce using rule 14 (OPTTAG)
    $default  reduce using rule 13 (STSPEC)


State 9

   12 STSPEC: STRUCT OPTTAG . LC DEFS RC

    LC  shift, and go to state 18


State 10

    0 $accept: PROGRAM $end .

    $default  接受


State 11

    2 EXTDEFS: EXTDEF EXTDEFS .

    $default  reduce using rule 2 (EXTDEFS)


State 12

   16 VAR: ID .
   18 FUNC: ID . LP PARAS RP

    LP  shift, and go to state 19

    $default  reduce using rule 16 (VAR)


State 13

    4 EXTDEF: SPEC EXTVARS . SEMI

    SEMI  shift, and go to state 20


State 14

    6 EXTVARS: EXTVAR .

    $default  reduce using rule 6 (EXTVARS)


State 15

   17 VAR: VAR . LB INT RB
   41 DEC: VAR .
   42    | VAR . ASSIGNOP INIT

    ASSIGNOP  shift, and go to state 21
    LB        shift, and go to state 22

    $default  reduce using rule 41 (DEC)


State 16

    5 EXTDEF: SPEC FUNC . STMTBLOCK

    LC  shift, and go to state 23

    STMTBLOCK  转到状态 24


State 17

    8 EXTVAR: DEC .
    9       | DEC . COMMA EXTVAR

    COMMA  shift, and go to state 25

    $default  reduce using rule 8 (EXTVAR)


State 18

   12 STSPEC: STRUCT OPTTAG LC . DEFS RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 37 (DEFS)

    SPEC    转到状态 26
    STSPEC  转到状态 7
    DEFS    转到状态 27
    DEF     转到状态 28


State 19

   18 FUNC: ID LP . PARAS RP

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 20 (PARAS)

    SPEC    转到状态 29
    STSPEC  转到状态 7
    PARAS   转到状态 30
    PARASF  转到状态 31
    PARA    转到状态 32


State 20

    4 EXTDEF: SPEC EXTVARS SEMI .

    $default  reduce using rule 4 (EXTDEF)


State 21

   42 DEC: VAR ASSIGNOP . INIT

    INT         shift, and go to state 33
    NEGINT      shift, and go to state 34
    ID          shift, and go to state 35
    READ        shift, and go to state 36
    WRITE       shift, and go to state 37
    LC          shift, and go to state 38
    MINUS       shift, and go to state 39
    LOGNOT      shift, and go to state 40
    MINUSMINUS  shift, and go to state 41
    PLUSPLUS    shift, and go to state 42
    BITNOT      shift, and go to state 43
    LP          shift, and go to state 44

    INIT  转到状态 45
    EXP   转到状态 46


State 22

   17 VAR: VAR LB . INT RB

    INT  shift, and go to state 47


State 23

   24 STMTBLOCK: LC . DEFS STMTS RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 37 (DEFS)

    SPEC    转到状态 26
    STSPEC  转到状态 7
    DEFS    转到状态 48
    DEF     转到状态 28


State 24

    5 EXTDEF: SPEC FUNC STMTBLOCK .

    $default  reduce using rule 5 (EXTDEF)


State 25

    9 EXTVAR: DEC COMMA . EXTVAR

    ID  shift, and go to state 49

    EXTVAR  转到状态 50
    VAR     转到状态 15
    DEC     转到状态 17


State 26

   38 DEF: SPEC . DECS SEMI

    ID  shift, and go to state 49

    VAR   转到状态 15
    DECS  转到状态 51
    DEC   转到状态 52


State 27

   12 STSPEC: STRUCT OPTTAG LC DEFS . RC

    RC  shift, and go to state 53


State 28

   36 DEFS: DEF . DEFS

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 37 (DEFS)

    SPEC    转到状态 26
    STSPEC  转到状态 7
    DEFS    转到状态 54
    DEF     转到状态 28


State 29

   23 PARA: SPEC . VAR

    ID  shift, and go to state 49

    VAR  转到状态 55


State 30

   18 FUNC: ID LP PARAS . RP

    RP  shift, and go to state 56


State 31

   19 PARAS: PARASF .

    $default  reduce using rule 19 (PARAS)


State 32

   21 PARASF: PARA . COMMA PARASF
   22       | PARA .

    COMMA  shift, and go to state 57

    $default  reduce using rule 22 (PARASF)


State 33

   84 EXP: INT .

    $default  reduce using rule 84 (EXP)


State 34

   87 EXP: NEGINT .

    $default  reduce using rule 87 (EXP)


State 35

   81 EXP: ID . LP ARGS RP
   82    | ID . ARRS

    LP  shift, and go to state 58
    LB  shift, and go to state 59

    $default  reduce using rule 90 (ARRS)

    ARRS  转到状态 60


State 36

   85 EXP: READ . LP EXP RP

    LP  shift, and go to state 61


State 37

   86 EXP: WRITE . LP EXP RP

    LP  shift, and go to state 62


State 38

   44 INIT: LC . ARGS RC

    INT         shift, and go to state 33
    NEGINT      shift, and go to state 34
    ID          shift, and go to state 35
    READ        shift, and go to state 36
    WRITE       shift, and go to state 37
    MINUS       shift, and go to state 39
    LOGNOT      shift, and go to state 40
    MINUSMINUS  shift, and go to state 41
    PLUSPLUS    shift, and go to state 42
    BITNOT      shift, and go to state 43
    LP          shift, and go to state 44

    $default  reduce using rule 46 (FEXP)

    FEXP  转到状态 63
    EXP   转到状态 64
    ARGS  转到状态 65


State 39

   75 EXP: MINUS . EXP

    INT         shift, and go to state 33
    NEGINT      shift, and go to state 34
    ID          shift, and go to state 35
    READ        shift, and go to state 36
    WRITE       shift, and go to state 37
    MINUS       shift, and go to state 39
    LOGNOT      shift, and go to state 40
    MINUSMINUS  shift, and go to state 41
    PLUSPLUS    shift, and go to state 42
    BITNOT      shift, and go to state 43
    LP          shift, and go to state 44

    EXP  转到状态 66


State 40

   76 EXP: LOGNOT . EXP

    INT         shift, and go to state 33
    NEGINT      shift, and go to state 34
    ID          shift, and go to state 35
    READ        shift, and go to state 36
    WRITE       shift, and go to state 37
    MINUS       shift, and go to state 39
    LOGNOT      shift, and go to state 40
    MINUSMINUS  shift, and go to state 41
    PLUSPLUS    shift, and go to state 42
    BITNOT      shift, and go to state 43
    LP          shift, and go to state 44

    EXP  转到状态 67


State 41

   79 EXP: MINUSMINUS . EXP

    INT         shift, and go to state 33
    NEGINT      shift, and go to state 34
    ID          shift, and go to state 35
    READ        shift, and go to state 36
    WRITE       shift, and go to state 37
    MINUS       shift, and go to state 39
    LOGNOT      shift, and go to state 40
    MINUSMINUS  shift, and go to state 41
    PLUSPLUS    shift, and go to state 42
    BITNOT      shift, and go to state 43
    LP          shift, and go to state 44

    EXP  转到状态 68


State 42

   78 EXP: PLUSPLUS . EXP

    INT         shift, and go to state 33
    NEGINT      shift, and go to state 34
    ID          shift, and go to state 35
    READ        shift, and go to state 36
    WRITE       shift, and go to state 37
    MINUS       shift, and go to state 39
    LOGNOT      shift, and go to state 40
    MINUSMINUS  shift, and go to state 41
    PLUSPLUS    shift, and go to state 42
    BITNOT      shift, and go to state 43
    LP          shift, and go to state 44

    EXP  转到状态 69


State 43

   77 EXP: BITNOT . EXP

    INT         shift, and go to state 33
    NEGINT      shift, and go to state 34
    ID          shift, and go to state 35
    READ        shift, and go to state 36
    WRITE       shift, and go to state 37
    MINUS       shift, and go to state 39
    LOGNOT      shift, and go to state 40
    MINUSMINUS  shift, and go to state 41
    PLUSPLUS    shift, and go to state 42
    BITNOT      shift, and go to state 43
    LP          shift, and go to state 44

    EXP  转到状态 70


State 44

   80 EXP: LP . EXP RP

    INT         shift, and go to state 33
    NEGINT      shift, and go to state 34
    ID          shift, and go to state 35
    READ        shift, and go to state 36
    WRITE       shift, and go to state 37
    MINUS       shift, and go to state 39
    LOGNOT      shift, and go to state 40
    MINUSMINUS  shift, and go to state 41
    PLUSPLUS    shift, and go to state 42
    BITNOT      shift, and go to state 43
    LP          shift, and go to state 44

    EXP  转到状态 71


State 45

   42 DEC: VAR ASSIGNOP INIT .

    $default  reduce using rule 42 (DEC)


State 46
